Set cluster menu width to fixe Lion no scrollbar issue.

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -630,7 +630,7 @@ ul#view-header li {
     border-left:1px solid #006699;
     border-bottom:1px solid #006699;
     background: white;
-    width:115px;
+    width: 100%;
     -moz-border-radius: 0 0 0 5px;
     -webkit-border-radius: 0 0 0 5px;
 }
